add register page

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -32,6 +32,10 @@
       </div>
 
       <button type="submit" class="btn-submit">Login</button>
+      
+      <div class="login-link">
+        Don't have an account? <a routerLink="/registration">Register here</a>
+      </div>
     </form>
   </div>
 </div>
