--- a/src/app/layouts/user-layout/user-layout.html
+++ b/src/app/layouts/user-layout/user-layout.html
@@ -2,10 +2,12 @@
   <header class="header">
     <div class="header-content">
       <h1>Pet Care Tracker</h1>
-      <div class="user-info" *ngIf="currentUser$ | async as currentUser">
-        <span class="user-name">{{ currentUser.firstName }} {{ currentUser.lastName }}</span>
-        <button class="btn-logout" (click)="logout()">Logout</button>
-      </div>
+      <a routerLink="/profile" class="user-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+          <circle cx="12" cy="7" r="4"></circle>
+        </svg>
+      </a>
     </div>
   </header>
   
