--- a/src/app/pages/edit-pet/edit-pet.html
+++ b/src/app/pages/edit-pet/edit-pet.html
@@ -1,6 +1,9 @@
 <div class="edit-pet-container">
-  <div class="edit-pet-card">
+  <div class="page-header">
+    <app-back-button></app-back-button>
     <h1>Edit Pet</h1>
+  </div>
+  <div class="edit-pet-card">
 
     <div class="error-alert" *ngIf="errorMessage">
       {{ errorMessage }}
@@ -75,9 +78,6 @@
       <div class="button-group">
         <button type="button" class="btn-delete" (click)="onDelete()" [disabled]="isLoading">
           {{ isLoading ? 'Deleting...' : 'Delete' }}
-        </button>
-        <button type="button" class="btn-secondary" (click)="onCancel()" [disabled]="isLoading">
-          Cancel
         </button>
         <button type="submit" class="btn-submit" [disabled]="petForm.invalid || isLoading">
           {{ isLoading ? 'Updating...' : 'Update Pet' }}
