--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -39,7 +39,7 @@
       </button>
       
       <div class="login-link">
-        Don't have an account? <a routerLink="/registration">Register here</a>
+        Don't have an account? <a routerLink="/registration" queryParamsHandling="merge">Register here</a>
       </div>
     </form>
   </div>
