--- a/src/app/pages/edit-pet/edit-pet.html
+++ b/src/app/pages/edit-pet/edit-pet.html
@@ -9,6 +9,10 @@
       {{ errorMessage }}
     </div>
 
+    <div class="success-alert" *ngIf="shareMessage">
+      {{ shareMessage }}
+    </div>
+
     <div class="loading-state" *ngIf="isLoadingData">
       <p>Loading pet data...</p>
     </div>
@@ -76,8 +80,8 @@
       </div>
 
       <div class="button-group">
-        <button type="button" class="btn-delete" (click)="onDelete()" [disabled]="isLoading">
-          {{ isLoading ? 'Deleting...' : 'Delete' }}
+        <button type="button" class="btn-share" (click)="onShare()" [disabled]="isLoading">
+          {{ isLoading ? 'Sharing...' : 'Share Pet' }}
         </button>
         <button type="submit" class="btn-submit" [disabled]="petForm.invalid || isLoading">
           {{ isLoading ? 'Updating...' : 'Update Pet' }}
