--- a/src/app/pages/registration/registration.html
+++ b/src/app/pages/registration/registration.html
@@ -83,7 +83,7 @@
       </button>
       
       <div class="login-link">
-        Already have an account? <a routerLink="/login">Login here</a>
+        Already have an account? <a routerLink="/login" queryParamsHandling="merge">Login here</a>
       </div>
     </form>
   </div>
