--- a/src/app/components/add-feeding-modal/add-feeding-modal.html
+++ b/src/app/components/add-feeding-modal/add-feeding-modal.html
@@ -1,4 +1,4 @@
-<app-modal [isOpen]="isOpen" [title]="'Add Feeding'" (close)="onClose()">
+<app-modal [isOpen]="isOpen" [title]="isEditMode ? 'Edit Feeding' : 'Add Feeding'" (close)="onClose()">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="pet">Pet *</label>
@@ -7,15 +7,28 @@
       </select>
     </div>
 
-    <div class="form-group">
-      <label for="fedAt">Date & Time *</label>
-      <input
-        type="datetime-local"
-        id="fedAt"
-        [(ngModel)]="feeding.fedAt"
-        name="fedAt"
-        required
-      />
+    <div class="datetime-group">
+      <div class="form-group">
+        <label for="feedingDate">Date *</label>
+        <input
+          type="date"
+          id="feedingDate"
+          [(ngModel)]="feedingDate"
+          name="feedingDate"
+          required
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="feedingTime">Time *</label>
+        <input
+          type="time"
+          id="feedingTime"
+          [(ngModel)]="feedingTime"
+          name="feedingTime"
+          required
+        />
+      </div>
     </div>
 
     <div class="form-group">
@@ -51,8 +64,11 @@
       <button type="button" class="btn btn-secondary" (click)="onClose()">
         Cancel
       </button>
+      <button *ngIf="isEditMode" type="button" class="btn btn-danger" (click)="onDelete()">
+        Delete
+      </button>
       <button type="submit" class="btn btn-primary" [disabled]="isLoading || !gramsInput.value">
-        {{ isLoading ? 'Adding...' : 'Add Feeding' }}
+        {{ isLoading ? 'Saving...' : 'Save' }}
       </button>
     </div>
   </form>
