--- a/src/app/pages/feedings/feedings.scss
+++ b/src/app/pages/feedings/feedings.scss
@@ -48,6 +48,7 @@
 
     select {
       width: 100%;
+      height: 44px;
       padding: 0.75rem 1.5rem;
       border: 1px solid #ddd;
       border-radius: 4px;
